--- a/src/components/Sidebar.scss
+++ b/src/components/Sidebar.scss
@@ -34,6 +34,7 @@
     padding: 0.5rem;
     border-radius: 0.4rem;
     margin-top: 1rem;
+    text-decoration: none !important;
 }
 .menu-item:hover {
     background-color: #3f4878;
