--- a/src/App.scss
+++ b/src/App.scss
@@ -22,6 +22,9 @@ ul {
 span {
     line-height: 0;
 }
+a {
+    text-decoration: none;
+}
 /*#endregion */
 
 /*#region Background and text color using variables */
@@ -75,7 +78,7 @@ span {
     margin-left: auto;
     margin-right: auto;
 }
-.center-absolute{
+.center-absolute {
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
