--- a/src/pages/Register.scss
+++ b/src/pages/Register.scss
@@ -5,7 +5,6 @@
     border: 1px solid #e9ecef;
     border-radius: 1rem;
     background-color: white;
-    width: 90%;
 }
 
 #form {
@@ -16,6 +15,7 @@
 #form > input,
 .btn {
     border: 1px solid #e9ecef;
+    border-radius: 0.4rem;
     padding: 0.9em 1em;
 }
 
@@ -42,11 +42,14 @@
 .register .col-1 {
     margin: auto;
     padding: 3rem 1rem;
-    width: 100%;
+    width: 50%;
+}
+.register .col-2 {
+    width: 50%;
 }
 
 .register .col-2 img {
-    width: 23rem;
+    width: 100%;
     height: 100%;
     object-fit: cover;
     align-self: flex-end;
