--- a/src/components/Page.scss
+++ b/src/components/Page.scss
@@ -10,4 +10,8 @@
 }
 .page-content {
     @include page-padding;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
