--- a/src/pages/Register.scss
+++ b/src/pages/Register.scss
@@ -25,7 +25,7 @@
 
 #form > .btn {
     background-color: $secondary;
-    color: $tertiary;
+    color: white;
     font-size: 1em;
     cursor: pointer;
 }
