check if password equals confirm password

--- a/src/pages/Register.scss
+++ b/src/pages/Register.scss
@@ -65,6 +65,11 @@
     display: none;
 }
 
+.error-label {
+    color: red;
+    font-size: 0.85rem;
+}
+
 @media screen and (min-width: 860px) {
     .register .col-2 img {
         display: initial;
