--- a/src/components/Page.scss
+++ b/src/components/Page.scss
@@ -15,11 +15,10 @@
     height: 100%;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items:center;
 }
-.icon{
-    width: 2rem;
-    height: 2rem;
+.icon {
+    @include icon-size;
     cursor: pointer;
     margin-top: auto;
     margin-bottom: auto;
