logo rotate + rtl style

--- a/src/App.scss
+++ b/src/App.scss
@@ -106,8 +106,8 @@ h1 {
 /*#endregion*/
 
 /*#region Commonly used styles*/
-.scale-0 {
-    transform: scale(0);
+.d-none {
+    display: none;
 }
 .hidden {
     display: none;
