--- a/src/pages/NotFound.scss
+++ b/src/pages/NotFound.scss
@@ -1,3 +1,4 @@
+@import "../styles/variables.scss";
 
 #main {
     display: table;
@@ -9,6 +10,7 @@
 .not-found {
     display: table-cell;
     vertical-align: middle;
+    color: $secondary;
 }
 
 .not-found h1 {
