sidebar text color

--- a/src/layout/Sidebar.scss
+++ b/src/layout/Sidebar.scss
@@ -31,6 +31,7 @@
     border-radius: 0.4rem;
     margin-top: 1rem;
     text-decoration: none !important;
+    color: $tertiary;
 }
 .menu-item:hover {
     background-color: #3f4878;
